--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </video>
 
 	  <nav>
-		  <a href="asksn.html"><img src="img/Ask SN.png"></a>
+		  <a href="index.html"><img src="img/Ask SN.png"></a>
 		  <div class="nav_links">
 			  <ul>
 				  <li><a href="index.html">Home</a></li>
