--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 			<div class="campus_col">
 				<img src="img/cerebral.jpg">
 				<div class="layer">
-					<h3>Cerebral Aneurysm</h3>
+					<a href="cerebral.html"><h3>Cerebral Aneurysm</h3></a>
 				</div>
 			</div>
 
 			<div class="campus_col">
 				<img src="img/aortic.jpg">
 				<div class="layer">
-					<h3>Abdominal Aortic</h3>
+					<a href="aorta.html"><h3>Abdominal Aortic</h3></a>
 				</div>
 			</div>
 		</div>
