--- a/cerebral.html
+++ b/cerebral.html
@@ -23,7 +23,7 @@
 <body>
 
     <nav style="background-color: darkcyan; padding-bottom: 0px; margin: 0px;">
-          <a href="asksn.html"><img src="img/Ask SN.png"></a>
+          <a href="index.html"><img src="img/Ask SN.png"></a>
           <div class="nav_links">
               <ul>
                   <li><a href="index.html">Home</a></li>
