--- a/cerebral.html
+++ b/cerebral.html
@@ -167,7 +167,7 @@
         <section class="section review" id="review">
             <div class="review-container container">
                     <div class="review-text">
-                            <h4 class="section-subtitle"><i>Cerebral Aneurysm</i></h4>
+                            <h4 class="section-subtitle"><i>Cerebral Aneurysm Symptoms</i></h4>
                             <h2 class="section-title"></h2>
                             <p class="section-description">However, a ruptured aneurysm is a very serious condition, typically causing a severe headache. And if an unruptured aneurysm presses against brain tissue or nerves, it may cause pain and other symptoms.</p>
                     </div>
