--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<div class="row">
 			<div class="name_col">
 		
-			<h3>Jenevevs Toledo</h3>
+			<h3>Jenevevs Tidoso</h3>
 			<h3>Mary Grace Opone</h3>
 			<h3>Joemarich Pocong</h3>
 			<h3>Marvie Cristine Aquino</h3>
