--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			  <ul>
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="about.html">About</a></li>
-				  <li><a href="">Contact</a></li>
+				  <li><a href="contact.html">Contact</a></li>
 				  <li><a href="login.html">Login</a></li>
 			  </ul>
 		  </div>
@@ -28,7 +28,7 @@
 
       <div class="text_box">
       	<h1>TAKING HEALTH CARE <br> TO THE NEXT LEVEL</h1>
-      	<p>Here at Ask SN, we are advocate of health. <br> Thus, our information for health diseases remain evidence-based <br>and accurate enough to be reliable</p>
+      	<p>AskSn is a group of student nurses of the University of Cebu-Banilad that advocates accurate and evidence-based health information and practices. We aim to provide reliable, accurate, and up-to-date information on health-related topics to our users. We are looking forward to empower users with the knowledge and resources they need to make informed decisions about their health and well-being.</p>
       </div>
 	</section>
 
