--- a/aorta.html
+++ b/aorta.html
@@ -117,7 +117,7 @@
                                     <div class="menu-item flex">
                                             <div class="menuItem-details">
                                                     <h4 class="menuItem-topic">Infection in the Aorta</h4>
-                                                    <p class="menuItem-des">AtheRarely, infection by certain bacteria or fungi might cause an abdominal aortic aneurysm.</p>
+                                                    <p class="menuItem-des">Although rarely, infection by certain bacteria or fungi might cause an abdominal aortic aneurysm.</p>
                                             </div>
                                     </div>
                                     <div class="menu-item flex">
