--- a/cerebral.html
+++ b/cerebral.html
@@ -204,7 +204,7 @@
                                              <br>
                                              <br>
                                              <br>
-                                            <p class="review-quote">Pain abouve and behind one eye, A diluted pupil, Double vision, Numbness on one side of the face</p>
+                                            <p class="review-quote">Pain above and behind one eye, A diluted pupil, Double vision, Numbness on one side of the face</p>
 
                                             <div class="testi-personDetails flex">
                                                     <span class="name">"Unruptured Aneurysm"</span>
