--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
 
 	<nav>
-		<a href="asksn.html"><img src="img/Ask SN.png"></a>
+		<a href="index.html"><img src="img/Ask SN.png"></a>
 		  <div class="nav_links">
 			  <ul>
 				  <li><a href="index.html">Home</a></li>
