--- a/signup.html
+++ b/signup.html
@@ -13,12 +13,12 @@
 
   <div>
     <nav>
-      <a href="asksn.html"><img src="img/Ask SN.png"></a>
+      <a href="index.html"><img src="img/Ask SN.png"></a>
       <div class="nav_links">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
       </div>
